# MSA

./: .gitignore  404.html  README.md  data.py  dev-requirements.in  dev-requirements.txt  docs-requirements.txt  index.html  mkdocs.yml  mypy.ini  objects.inv  pf.py  pyproject.toml  requirements.in  requirements.txt  search.html  weaver.sqlite3  weaver.toml
api/: index.html
docs/src/: api.md  index.md  installation.md  usermanual.md
installation/: index.html
msa/: __main__.py  main.py  pf.py
search/: search_index.json
usermanual/: index.html
