[project]
name = "msa"
dynamic = ["version"]
description = 'A Python program for matrix structural analysis of skeletal structures.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["engineering", "structural engineering", "structural analysis", "matrix structural analysis"]
authors = [
  { name = "Satish Annigeri", email = "satish.annigeri@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "scipy>=1.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "msa/__about__.py"

[project.scripts]
msa = "msa.main:main"
version = "msa.main:version"

[project.urls]
Documentation = "https://github.com/satish-annigeri/msa#readme"
Issues = "https://github.com/satish-annigeri/msa/issues"
Source = "https://github.com/satish-annigeri/msa"

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore variable names in all caps
  "N803", "N806",
  # Ignore print()
  "T201",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["msa"]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.1.2",
    "pymdown-extensions>=10.2.1",
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocstrings",
  "mkdocstrings-python",
  "pymdown-extensions",
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"